# PDFParseV2

./: .env.example  .gitignore  BEM_TOOL_QUICK_START.md  CLAUDE.md  CLEANUP_SUMMARY.md  ENHANCED_BEM_TOOL_GUIDE.md  PHASE2_TASKS.md  README.md  claude_desktop_config.json  commit_changes.sh  pdf_extract  pyproject.toml  requirements-dev.txt  requirements.txt  results.csv  setup.py  test_mcp_debug.py  test_mcp_server.py  test_mcp_setup.py  test_output.csv
.github/workflows/: ci.yml
archive/documentation/: CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  CLAUDE_DESKTOP_VERIFICATION_GUIDE.md  LIFE_1528Q_STRUCTURE_ANALYSIS.md  PHASE1_VALIDATION_SUMMARY.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_STRUCTURE.md  PYPDFFORM_ANALYSIS.md  README.md  TASK_2_1_3_RESULTS.md  TASK_2_1_4_RESULTS.md  WRAPPER_FIX_SUMMARY.md
archive/old_implementation/: direct_test.py  examine_w4r_fields.py  fix_claude_desktop_config.py  mcp_server_backup.py  mcp_server_backup2.py  organize_project.py  organize_structure.py  pypdfform_field_renamer.py  pyproject.toml  quick_test_all_pdfs.py  quick_wrapper_test.py  requirements.txt  simple_pypdfform_test.py  test_complex_life_1528q.py  test_comprehensive_all_pdfs.py  test_enhanced_wrapper.py  test_life_1528q_simple.py  test_mcp_server_basic.py  test_mcp_setup.py  test_pypdfform_w4r.py  test_wrapper_fix.py  validate_fix.py  validate_phase1.py
archive/old_implementation/examples/: .gitkeep
archive/old_implementation/scripts/: basic_test.py  setup_claude_desktop.py
archive/old_implementation/tests/integration/: test_life_1528q_enhanced.py
archive/old_implementation/tests/mcp/: test_mcp_enhanced_tools.py
archive/old_implementation/tests/unit/: test_mcp_server.py
archive/old_implementation/training_data/: Clean Field Data - Sheet1.csv
archive/old_implementation/training_data/pdf_csv_pairs/: W-4R_parsed_extracted_fields.csv
docs/: DEVELOPMENT.md
scripts/: initialize_project.sh
src/cli/: pdf_extractor_cli.py
src/mcp_tools/: README.md  __init__.py  pdf_naming_server.py
src/pdf_modifier/: __init__.py  mcp_server.py
src/pdf_parser/: cli.py  field_extractor.py
tests/: conftest.py  test_basic_imports.py
tests/integration/: test_mcp_integration.py  test_real_pdf_processing.py
tests/unit/: test_mcp_tools.py  test_mcp_tools_simple.py  test_pdf_field_extractor.py
training_data/pdf_csv_pairs/: FAF-0578AO.6_parsed_extracted_fields.csv  LAF-0119AO__parsed_extracted_fields.csv  LIFE-1528-Q__parsed_extracted_fields.csv  W-4R_parsed_extracted_fields.csv
(+19 files in other folders)
